ajax create task_category

--- a/app/assets/stylesheets/application/share.scss
+++ b/app/assets/stylesheets/application/share.scss
@@ -217,6 +217,9 @@
 //traing_platform_modal2
 .my-nav1{
 	border-radius: 10px;
+	li.with-33 {
+		width: 33%;
+	}
 	.nav-tabs{
 		background-color:rgba(0, 203, 210,1);
 		padding:15px 0 1px 30px;
