--- a/app/views/training_platform/task_categories/create.js.erb
+++ b/app/views/training_platform/task_categories/create.js.erb
@@ -1,6 +1,4 @@
-<% if @task_category.errors.blank? %>
-  location.href = "<%= training_platform_project_task_categories_path(project_id: params[:project_id])%>";
-<% else %>
-  $("#trainingPlatformModalContent").html("<%= escape_javascript(render 'training_platform/task_categories/form') %>");
-  $("#trainingPlatformModal").modal('show');
-<% end %>
+$("<%= escape_javascript(render @task_category) %>").appendTo("#task_categories");
+//自动清空文本框中的值
+$('#task_category_name').val("");
+$('#task_category_description').val("");
