--- a/app/views/training_platform/projects/new.js.erb
+++ b/app/views/training_platform/projects/new.js.erb
@@ -1,2 +1,2 @@
-$("#trainingPlatformModalContent").html("<%= escape_javascript(render 'training_platform/projects/form') %>");
+$("#trainingPlatformModalContent").html("<%= escape_javascript(render partial: 'training_platform/projects/form')%>");
 $("#trainingPlatformModal").modal('show');
