--- a/app/views/training_platform/share/_left_nav.html.erb
+++ b/app/views/training_platform/share/_left_nav.html.erb
@@ -71,9 +71,18 @@
 
     <div class="sidebar-shortcuts" id="sidebar-shortcuts">
       <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-        <%= link_to( new_training_platform_project_task_category_path, "data-toggle" => "tooltip", "data-placement" => "opt", title: "新建任务列表", class: "btn btn-success", format: :js, remote: true) do %>
-          <i class="icon-tasks"></i>
-        <% end %>
+        <li class="<%= 'active' if params[:controller] == "training_platform/task_categories"%>">
+          <%= link_to new_training_platform_project_task_category_path(@project.id), remote: true do %>
+            <span class="glyphicon glyphicon-plus"></span>
+            <span class="menu-text">添加任务分类</span>
+          <% end %>
+        </li>
+
+        <div class="sidebar-shortcuts" id="sidebar-shortcuts">
+          <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
+            <%= link_to( new_training_platform_project_task_category_path, "data-toggle" => "tooltip", "data-placement" => "opt", title: "新建任务列表", class: "btn btn-success", format: :js, remote: true) do %>
+              <i class="icon-tasks"></i>
+            <% end %>
 
         <%#= link_to( "#", "data-toggle" => "tooltip", "data-placement" => "opt", title: "新建任务", class: "btn btn-info") do %>
           <!-- <i class="icon-plus"></i> -->
