edit destroy task_categories

--- a/app/views/training_platform/share/_left_nav.html.erb
+++ b/app/views/training_platform/share/_left_nav.html.erb
@@ -74,7 +74,7 @@
         <li class="<%= 'active' if params[:controller] == "training_platform/task_categories"%>">
           <%= link_to new_training_platform_project_task_category_path(@project.id), remote: true do %>
             <span class="glyphicon glyphicon-plus"></span>
-            <span class="menu-text">添加任务分类</span>
+            <span class="menu-text">任务分类</span>
           <% end %>
         </li>
 
