--- a/app/views/training_platform/share/_task_show.html.erb
+++ b/app/views/training_platform/share/_task_show.html.erb
@@ -9,137 +9,117 @@
   </div>
 
   <div class="row task-ops">
-    <div class="col-xs-3 col-sm-2 col-lg-2 col-lg-2 no-padding dropdown">
+    <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
       <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
         所属任务
         <span class="caret my-caret"></span>
       </button>
       <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-        <li>待办中</li>
-        <li>进行中</li>
-        <li>验收通过</li>
-        <li>验收失败</li>
+        <li><a href="#">待办中</a></li>
+        <li><a href="#">进行中</a></li>
+        <li><a href="#">验收通过</a></li>
+        <li><a href="#">验收失败</a></li>
       </ul>
     </div>
-    <div class="col-xs-3 col-sm-2 col-lg-2 col-lg-2 no-padding dropdown">
+
+    <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
       <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
         负责人
         <span class="caret my-caret"></span>
       </button>
       <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-        <li>樊伟</li>
-        <li>张留刚</li>
-        <li>陈博</li>
+        <li><a href="#">樊伟</a></li>
+        <li><a href="#">张留刚</a></li>
+        <li><a href="#">陈博</a></li>
+      </ul>
+    </div>
+
+    <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
+      <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        截止日期
+      </button>
+    </div>
+
+    <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
+      <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        优先级
+        <span class="caret my-caret"></span>
+      </button>
+      <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+        <li><a href="#">重要</a></li>
+        <li><a href="#">普通</a></li>
+        <li><a href="#">不重要</a></li>
+      </ul>
+    </div>
+
+    <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
+      <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        附件
+      </button>
+    </div>
+
+    <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
+      <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        操作
+        <span class="caret my-caret"></span>
+      </button>
+      <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+        <li><a href="#">删除</a></li>
       </ul>
     </div>
   </div>
 
+  <div class="row task-content">
+    <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
+      <h4> 业务需求讨论DSAFASDF
+      <span class="dropdown">
+        <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          待办中
+          <span class="caret my-caret"></span>
+        </button>
+        <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+          <li><a href="#">进行中</a></li>
+          <li><a href="#">已完成</a></li>
+        </ul>
+      </span>
+      </h4>
+     </div> 
+
+    <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
+      <form class="form-horizontal">
+        <div class="form-group">
+          <div class="col-xs-8">
+            <input class="form-control" id="inputEmail3" placeholder="请输入任务标签">
+          </div>
+          <div class="col-xs-2">
+            <botton class="btn btn-success">添加标签</botton>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
+      <form class="form-horizontal">
+        <div class="form-group">
+          <div class="col-xs-8">
+            <select class="form-control">
+              <option>请选择协作者</option>
+              <option>樊伟</option>
+              <option>张留刚</option>
+            </select>
+          </div>
+          <div class="col-xs-2">
+            <botton class="btn btn-success">确认提交</botton>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12 task-description">
+      这里是任务描述
+    </div>
+  </div>
+
+
   
-  <div class="my-details">
-    <div class="col-xs-2 dropdown">
-      <botton class="my-btn my-black btn btn-default">所属任务</botton>
-    </div>
-    <div class="col-xs-2 dropdown" style="padding-left:10px">
-      <div class="dropdown">
-        <button class="my-btn my-black btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          负责人
-          <span class="caret my-caret"></span>
-        </button>
-        <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">other</a></li>
-          <li><a href="#">Some</a></li>
-          <li><a href="#">Separate</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-xs-2 dropdown" style="padding-left:20px">
-      <botton class="my-btn my-black btn btn-default">截止日期</botton>
-    </div>
-    <div class="col-xs-2 dropdown" style="padding-left:30px">
-      <div class="dropdown">
-        <button class="my-btn my-black btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          优先级
-          <span class="caret my-caret"></span>
-        </button>
-        <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">other</a></li>
-          <li><a href="#">Some</a></li>
-          <li><a href="#">Separate</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-xs-2 dropdown" style="padding-left:40px">
-      <botton class="my-btn my-black btn btn-default">附件</botton>
-    </div>
-    <div class="col-xs-2 dropdown" style="padding-left:25px">
-      <div class="dropdown">
-        <button class="my-btn my-black btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          操作
-          <span class="caret my-caret"></span>
-        </button>
-        <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">other</a></li>
-          <li><a href="#">Some</a></li>
-          <li><a href="#">Separ</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-<div class="col-xs-12">
-  <div class="col-xs-4 a-col">
-    <h4>业务需求讨论</h4>
-  </div>
-  <div class="dropdown col-xs-8">
-    <button class="my-btn my-blue btn btn-default dropdown-toggle right_dm1" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-      待办中
-      <span class="caret my-caret"></span>
-    </button>
-    <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-      <li><a href="#">Action</a></li>
-      <li><a href="#">other</a></li>
-      <li><a href="#">Some</a></li>
-      <li><a href="#">link</a></li>
-    </ul>
-  </div>
-</div>
-  <div class="col-xs-12 task_t">
-    <form class="form-horizontal">
-      <div class="form-group">
-        <div class="col-xs-8">
-          <input type="email" class="form-control" id="inputEmail3" placeholder="请输入任务描述或者任务标签">
-        </div>
-        <div class="col-xs-2">
-          <botton class="btn btn-default">添加标签</botton>
-        </div>
-      </div>
-    </form>
-  </div>
-                                            <div class="col-xs-12 task_d">
-  <div class="dropdown col-xs-4">
-    <button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-      请选择协作者
-      <span class="caret my-caret"></span>
-    </button>
-    <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-      <li><a href="#">Action</a></li>
-      <li><a href="#">other</a></li>
-      <li><a href="#">Some</a></li>
-      <li><a href="#">link</a></li>
-    </ul>
-  </div>
-  <div class="col-xs-2">
-    <button type="submit" class="btn btn-default">确认提交</button>
-  </div>
-  </div>
-  <h5>1、这里是任务的描述这里是任务的描述这里是任务的描述</h5>
-  <h5>1、这里是任务的描述这里是任务的描述这里是任务的描述</h5>
-  <div class="col-xs-12 my-task">
-    <h3>任务动态</h3>
-    <hr class="my-line">
-  </div>
-  <div class="my-trends">
-  </div>
 </div>
