--- a/app/views/training_platform/announces/_show_announce.html.erb
+++ b/app/views/training_platform/announces/_show_announce.html.erb
@@ -1,19 +1,27 @@
 <% if @announce.blank? %>
-  这里显示公告详细信息
+	<div class="col-xs-12">
+		<div class="jumbotron tips">
+			<h5 class="text-muted">点击左侧公告显示公告的具体内容，可点击<code><span class="glyphicon glyphicon-edit"></span></code>编辑，或者按<kbd> e </kbd> 进行编辑	</h5>
+		</div>
+	</div>
 <% else %>
-  <ul class="nav nav-pills nav-stacked anno-ul">
-    <li >
-      <span class="col-xs-9 text-left"><%= @announce.title %></span>
-      <span class="col-xs-3 text-right"><%= @announce.updated_at.try(:strftime, "%F") %></span>
-    </li>
-  </ul>
-  <div class="col-xs-12">
-    <br>
-    <div class="announce-content">
-      <p><%= @announce.description %></p>
-    </div>
-  </div>
-  <%= link_to(edit_training_platform_project_announce_path(project_id: params[:project_id], id: @announce), remote: true, format: :js) do %>
-    <span class="glyphicon glyphicon-edit pull-right"></span>
-  <% end %>
+	<div class="my-task">
+		<h3 class="clearfix">公告详情</h3>
+		<hr class="my-line">
+	</div>
+	<ul class="nav nav-pills nav-stacked anno-ul">
+		<li >
+			<span class="col-xs-9 text-left"><%= @announce.title %></span>
+			<span class="col-xs-3 text-right"><%= @announce.updated_at.try(:strftime, "%F") %></span>
+		</li>
+	</ul>
+	<div class="col-xs-12">
+		<br>
+		<div class="announce-content">
+			<p><%= @announce.description %></p>
+		</div>
+	</div>
+	<%= link_to(edit_training_platform_project_announce_path(project_id: params[:project_id], id: @announce), remote: true, format: :js) do %>
+		<span class="glyphicon glyphicon-edit pull-right"></span>
+	<% end %>
 <% end %>
