--- a/app/views/training_platform/announces/create.js.erb
+++ b/app/views/training_platform/announces/create.js.erb
@@ -1,4 +1,4 @@
 $("#anno-index").replaceWith("<%= escape_javascript(render partial: 'announces' ) %>");
-$("#anno-show").html("<%= escape_javascript(render partial: 'show_announce' )%>");
+//$("#anno-show").html("<%= escape_javascript(render partial: 'show_announce' )%>");
 $("#trainingPlatformModal").modal('hide');
 alert("公告创建成功");
