--- a/app/assets/stylesheets/training_platform/main.css.scss
+++ b/app/assets/stylesheets/training_platform/main.css.scss
@@ -19,3 +19,13 @@ $color-green: #11BD9E;
 	padding-top: 21px;
 	padding-bottom: 21px;
 }
+
+.tips{
+	border-radius: 10px;
+	background-color: #F7F9F9;
+	-moz-box-shadow:0px 1px 1px #C8C8C8 inset;               /* For Firefox3.6+ */
+	-webkit-box-shadow:0px 1px 1px #C8C8C8 inset;            /* For Chrome5+, Safari5+ */
+	box-shadow:0px 1px 1px #C8C8C8 inset;                    /* For Latest Opera */
+	padding: 20px;
+	margin-top: 40px;
+}
