--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -160,7 +160,7 @@
   .ace_content_page_right {
     //任务列表详细
     .task-category-detail {
-      min-height: 200px;
+      height: 150px;
       .task-categoty-description {
         text-indent: 2em;
       }
