--- a/app/views/training_platform/task_categories/show.html.erb
+++ b/app/views/training_platform/task_categories/show.html.erb
@@ -87,4 +87,12 @@
     $('[data-rel="tooltip"]').tooltip();
   
   });
+
+  $('#profile-feed-1').slimScroll({
+        height: '250px',
+        alwaysVisible : true
+        });
+      
+        $('.profile-social-links > a').tooltip();
+    
 </script>
