--- a/app/views/training_platform/task_categories/_form.html.erb
+++ b/app/views/training_platform/task_categories/_form.html.erb
@@ -30,7 +30,7 @@
 
       <div role="tabpanel" class="tab-pane" id="profile">
       <div class="col-xs-8 ace_modal_tab1">
-       <input type="text" placeholder="请输入关键字" class="ace_modal_form" id="ace_modal_form" autocomplete="off" />
+       <input type="text" placeholder="请输入关键字" data-provide="typeahead" data-url=<%=api_users_path %> class="ace_modal_form" id="ace_modal_form" autocomplete="off" />
       </div>
       <div class="col-xs-4">
         <button type="submit" class="btn btn-default">Send invitation</button>
@@ -114,3 +114,33 @@
     </div>
   </div>
 </div>
+
+<!-- typeahead输入关键词自动提示效果 -->
+<script type="text/javascript">
+  $(document).ready(function(){
+    window.query_cache = {};
+    var url = $('#ace_modal_form').data("url");
+    $('#ace_modal_form').typeahead({
+      source:function(query,process){
+        if(query_cache[query]){
+          process(query_cache[query]);
+          return;
+        }
+        if( typeof searching != "undefined") {
+          clearTimeout(searching);
+          process([]);
+        }
+        searching = setTimeout(function() {
+          return $.getJSON(
+            url,
+            { q:query },
+            function(data){
+              query_cache[query] = data;
+              return process(data);
+            }
+          );
+        }, 300);
+      }
+    });
+  });
+</script>
