add status to choose announce

--- a/app/views/training_platform/announces/_show_announce.html.erb
+++ b/app/views/training_platform/announces/_show_announce.html.erb
@@ -1,7 +1,7 @@
 <% if @announce.blank? %>
 	<div class="col-xs-12">
 		<div class="jumbotron tips">
-			<h5 class="text-muted">点击左侧公告显示公告的具体内容，可点击<code><span class="glyphicon glyphicon-edit"></span></code>编辑，或者按<kbd> e </kbd> 进行编辑	</h5>
+			<h5 class="text-muted">点击左侧公告显示公告的具体内容，可点击<code><span class="glyphicon glyphicon-edit"></span></code>编辑</h5>
 		</div>
 	</div>
 <% else %>
