--- a/app/views/training_platform/share/_widget.html.erb
+++ b/app/views/training_platform/share/_widget.html.erb
@@ -1,5 +1,5 @@
   <div class="row">
-    <div class="widget-box transparent">
+    <div class="widget-box transparent ace_widget_box">
       <div class="widget-header widget-header-small">
         <h4 class="blue smaller">
           <i class="icon-rss orange"></i>
