--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -134,17 +134,7 @@
       font-weight: normal;
     }
 
-    //状态dropdown
-    .task-state-dropdown {
-      color: #2adcc9;
-      li {
-        padding: 10px 10px;
-        &:hover {
-          color: #fff;
-          background-color: #61d5c7;
-        }
-      }
-    }
+
 
     //任务一览
     .task-list-row {
@@ -152,17 +142,38 @@
       margin: 10px;
       border: 1px solid #ccc;
       padding: 5px;
-      color: #000;
+      color: #000; 
+
+      a {
+        color: #000;
+        display: block; 
+      }
       
       &:hover, &.active {
         background-color: #5ac3b7;
         color: #fff;
+        a {
+          color: #fff; 
+        }
       }
 
       &.no-hover:hover {
         background-color: #fff;
         cursor: default;
         color: #000;
+      }
+
+      //状态dropdown
+      .task-state-dropdown {
+        li a{
+          padding-top: 5px;
+          padding-bottom: 5px;
+          color: #2adcc9;
+          &:hover {
+            color: #fff;
+            background-color: #61d5c7;
+          }
+        }
       }
     }
 
