--- a/app/views/training_platform/share/_task_show.html.erb
+++ b/app/views/training_platform/share/_task_show.html.erb
@@ -11,26 +11,25 @@
   <div class="row task-ops">
     <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
       <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        所属任务
+        <%= @task.try(:task_category).try(:name).try(:truncate, 5, omission: "..") || "所属任务"%>
         <span class="caret my-caret"></span>
       </button>
       <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-        <li><a href="#">待办中</a></li>
-        <li><a href="#">进行中</a></li>
-        <li><a href="#">验收通过</a></li>
-        <li><a href="#">验收失败</a></li>
+        <% @project.task_categories.each do |tc| %>
+          <li><a href="#"><%= tc.name %></a></li>
+        <% end %>
       </ul>
     </div>
 
     <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
       <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        负责人
+        <%= @task.get_principal_user.try(:show_name) || "负责人" %>
         <span class="caret my-caret"></span>
       </button>
       <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-        <li><a href="#">樊伟</a></li>
-        <li><a href="#">张留刚</a></li>
-        <li><a href="#">陈博</a></li>
+        <% @project.get_member.each do |member| %>
+          <li><a href="#"><%= member.show_name %></a></li>
+        <% end %>
       </ul>
     </div>
 
@@ -42,13 +41,13 @@
 
     <div class="col-xs-4 col-sm-2 col-lg-2 col-lg-2 dropdown">
       <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        优先级
+        <%= Task::Level[@task.level.to_sym]%>
         <span class="caret my-caret"></span>
       </button>
       <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-        <li><a href="#">重要</a></li>
-        <li><a href="#">普通</a></li>
-        <li><a href="#">不重要</a></li>
+        <% Task::Level.each do |k,v| %>
+          <li><a href="#"><%= v %></a></li>
+        <% end %>
       </ul>
     </div>
 
@@ -64,6 +63,7 @@
         <span class="caret my-caret"></span>
       </button>
       <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
+        <li><a href="#">编辑</a></li>
         <li><a href="#">删除</a></li>
       </ul>
     </div>
@@ -71,17 +71,16 @@
 
   <div class="row task-content">
     <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
-      <h4> 业务需求讨论DSAFASDF
-      <span class="dropdown">
+      <h4> <%= @task.name %>
+      <!-- <span class="dropdown">
         <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          待办中
+          <%#= Task::State[@task.state.to_sym]%>
           <span class="caret my-caret"></span>
         </button>
         <ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-          <li><a href="#">进行中</a></li>
-          <li><a href="#">已完成</a></li>
+          <%#= raw(staus_dropdown @task.state, aasm_state_training_platform_project_task_path(@project,@task))%>
         </ul>
-      </span>
+      </span> -->
       </h4>
      </div> 
 
