--- a/app/views/training_platform/users/show.html.erb
+++ b/app/views/training_platform/users/show.html.erb
@@ -15,7 +15,7 @@
           <div class="col-xs-12">
             <div class="row">
               <!-- PAGE CONTENT BEGINS -->
-              <%= render partial: "training_platform/share/task_list", 
+              <%#= render partial: "training_platform/share/task_list", 
                 locals: {
                   waits: @user.self_tasks.waits,
                   dos: @user.self_tasks.dos,
