--- a/app/views/training_platform/share/_task_list.html.erb
+++ b/app/views/training_platform/share/_task_list.html.erb
@@ -2,6 +2,11 @@
 <div id="taskList" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
   <div class="my-task">
     <h3><%= @task_category.try(:name) || ((@user.id == current_user.id ? "我" : @user.try(:show_name)) + "的任务") %></h3>
+    <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
+                <% @task_category.tags.any? %>
+                <% @task_category.tags.each do |tag| %>
+                <%= link_to tag.name %>
+                <% end %>
     <hr class="my-line">
   </div>
 
@@ -21,7 +26,7 @@
           <ul class="dropdown-menu task-state-dropdown" aria-labelledby="dropdownMenu1" data-task="<%= task.id%>">
             <%= raw(staus_dropdown task.state, aasm_state_training_platform_project_task_path(@project,task))%>
           </ul>
-        </div>
+          </div>
         <%= link_to training_platform_project_task_path(task, project_id: @project.id), class: "task-link", remote: true, format: :js, id: "taskListLink#{task.id}" do %>
         <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 no-padding"><span><%= task.name %></span></div>
         <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span><%= task.end_time.try(:strftime, "%F") %></span></div>
