--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -143,7 +143,8 @@
       border: 1px solid #ccc;
       padding: 5px;
       color: #000; 
-
+      cursor: pointer;
+      
       a {
         color: #000;
         display: block; 
