--- a/app/views/training_platform/share/_task_list.html.erb
+++ b/app/views/training_platform/share/_task_list.html.erb
@@ -12,7 +12,7 @@
     <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有待办中的任务", is_show: waits.blank? } %>
      <!-- 没有任务提示 -->
     <% waits.each do |task|%>
-      <div class="row task-list-row">
+      <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
         <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
           <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             待办中
@@ -37,7 +37,7 @@
     <h4 class="my-progress">进行中(<%= dos.size %>)</h4>
     <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有进行中的任务", is_show: dos.blank?} %>
     <% dos.each do |task|%>
-      <div class="row task-list-row">
+      <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
         <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
           <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             进行中
@@ -62,7 +62,7 @@
     <h4 class="my-progress">已完成(<%= completes.size %>)</h4>
     <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有已完成的任务", is_show: completes.blank?} %>
     <% completes.each do |task|%>
-      <div class="row task-list-row">
+      <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
         <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
           <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             已完成
@@ -87,7 +87,7 @@
     <h4 class="my-progress">验收通过(<%= acceprances.size %>)</h4>
     <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有验收通过的任务", is_show: acceprances.blank?} %>
     <% acceprances.each do |task|%>
-      <div class="row task-list-row">
+      <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
         <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
           <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             验收通过
